Last commit with previous attempt, preparing to start fresh with better attempt

--- a/build.gradle
+++ b/build.gradle
@@ -9,17 +9,15 @@ subprojects {
 	}
 
 	ext {
-		spring_version = '1.0.8.RELEASE'
-		springboot_version = '2.2.2.RELEASE'
+		spring_version = '4.2.5.RELEASE'
+		springboot_version = '2.2.6.RELEASE'
 	}
 
 	ext.libs = [
 		unit_tests : [
-			dependencies.create("org.springframework.boot:spring-boot-starter-test:${springboot_version}") {
-				exclude group: 'org.junit.vintage',
-				module: 'junit-vintage-engine'
-			},
-			"org.hamcrest:hamcrest:2.2",
+			"junit:junit:4.+",
+			"org.mockito:mockito-core:1.10.19",
+			"org.assertj:assertj-core:3.3.0"
 		],
 		acceptance_tests : [
 
@@ -32,9 +30,10 @@ subprojects {
 		],
 		spring_boot : [
 			"org.springframework.boot:spring-boot-starter-web:${springboot_version}",
-			"org.springframework.boot:spring-boot-starter-actuator:${springboot_version}",
 			"org.springframework.boot:spring-boot-starter-logging:${springboot_version}",
-			"io.spring.gradle:dependency-management-plugin:${spring_version}",
+			"org.springframework:spring-context:2.0.5",
+    		//"org.springframework.boot:spring-boot-starter-data-jpa:${springboot_version}",
+			//"io.spring.gradle:dependency-management-plugin",
 		],
 		rest : [
 			"org.springframework.boot:spring-boot-starter-web:${springboot_version}",
@@ -57,32 +56,41 @@ subprojects {
 // apply java plugin to all modules
 configure(allprojects - project(":application")) {
 	apply plugin: "java"
-	apply plugin: "jacoco"
+	// apply plugin: "jacoco"
 
-	group = 'com.example'
-	version = '0.0.1-SNAPSHOT'
+	// group = 'com.rabbitholes'
+	// version = '0.0.1-SNAPSHOT'
 	sourceCompatibility = '1.8'
 
-	test {
-		useJUnitPlatform()
-	}
-
-	jacocoTestCoverageVerification {
-		violationRules {
-			rule {
-				element = 'METHOD'
-					limit {
-					counter = 'LINE'
-					value = 'COVEREDRATIO'
-					minimum = 1.0
-				}
-				excludes = [
-					'com.example.springboot.Application.main(java.lang.String[])'
-				]
-			}
+	// generate the main application jar in the "application" folder, to make it easier to find
+	jar {
+		manifest {
+			attributes(
+				'Main-Class': 'com.rabbitholes.Application'
+			)
 		}
 	}
 
-	test.finalizedBy jacocoTestReport
-	check.dependsOn jacocoTestCoverageVerification
+	// test {
+	// 	useJUnitPlatform()
+	// }
+
+	// jacocoTestCoverageVerification {
+	// 	violationRules {
+	// 		rule {
+	// 			element = 'METHOD'
+	// 				limit {
+	// 				counter = 'LINE'
+	// 				value = 'COVEREDRATIO'
+	// 				minimum = 1.0
+	// 			}
+	// 			excludes = [
+	// 				'com.example.springboot.Application.main(java.lang.String[])'
+	// 			]
+	// 		}
+	// 	}
+	// }
+
+	// test.finalizedBy jacocoTestReport
+	// check.dependsOn jacocoTestCoverageVerification
 }
