--- a/application/core/build.gradle
+++ b/application/core/build.gradle
@@ -1,6 +1,7 @@
 description = "Entities (domain objects) and uses cases that implement the business logic"
 
 dependencies {
+    compile libs.spring_boot
     compile libs.string_utils
 
     testCompile libs.unit_tests
