--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,28 @@
-rootProject.name = "rabbitholes"
+rootProject.name = 'clean-architecture-example'
 
-// application
-include "application:core"
-include "application:dataproviders"
-include "application:entrypoints"
-include "application:configuration"
+include ':config'
+include ':domain'
+include ':usecase'
+include ':jug'
+include ':uuid'
+include ':in-memory-db-simple'
+include ':in-memory-db-hazelcast'
+include ':controller'
+//include ':spring-controller'
+//include ':vertx-controller'
 
-// testing
-// include "acceptance-tests"
-// include "integration-tests"
+include ':manual-app'
+include ':spring-app'
+include ':vertx-app'
+
+project(":jug").projectDir = file("adapter/id-generator/jug")
+project(":uuid").projectDir = file("adapter/id-generator/uuid")
+project(":in-memory-db-simple").projectDir = file("adapter/repository/in-memory-simple")
+project(":in-memory-db-hazelcast").projectDir = file("adapter/repository/in-memory-hazelcast")
+project(":controller").projectDir = file("adapter/controller")
+//project(":spring-controller").projectDir = file("adapter/controller/spring-controller")
+//project(":vertx-controller").projectDir = file("adapter/controller/vertx-controller")
+
+project(":manual-app").projectDir = file("application/manual-app")
+project(":spring-app").projectDir = file("application/spring-app")
+project(":vertx-app").projectDir = file("application/vertx-app")
