--- a/application/adapter/repository/in-memory-simple/build.gradle
+++ b/application/adapter/repository/in-memory-simple/build.gradle
@@ -7,4 +7,12 @@ dependencies {
 		project(':domain'),
 		project(':usecase')
 	)
+	testImplementation(
+			project(':domain'),
+			project(':usecase'),
+			'org.apache.commons:commons-lang3:3.7',
+			'junit:junit:4.+',
+			'org.assertj:assertj-core:3.3.0',
+			'org.mockito:mockito-core:2.23.4'
+	)
 }
