--- a/application/spring-app/build.gradle
+++ b/application/spring-app/build.gradle
@@ -19,4 +19,15 @@ dependencies {
 		'org.springframework.boot:spring-boot-starter-web',
 		'com.fasterxml.jackson.core:jackson-core:2.9.5',
 	)
+	testImplementation(
+			project(':config'),
+			project(':usecase'),
+			project(':controller'),
+			'org.springframework.boot:spring-boot-starter-web',
+			'com.fasterxml.jackson.core:jackson-core:2.9.5',
+			'org.apache.commons:commons-lang3:3.7',
+			'junit:junit:4.+',
+			'org.assertj:assertj-core:3.3.0',
+			'org.mockito:mockito-core:2.23.4'
+	)
 }
