Have initial Wikipedia search functionality working, will add controller exception catching and finish unit testing additions in next commit, logging and front-end to follow after

--- a/application/config/build.gradle
+++ b/application/config/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 		project(':domain'),
 		project(':in-memory-db-simple'),
 		project(':in-memory-db-hazelcast'),
+		project(':external-api'),
 		project(':jug'),
 		project(':uuid'),
 		project(':controller'),
